[package]
name = "cartridge"
version = "0.1.0"
edition = "2021"
description = "A command line tool for managing your Minecraft plugin development projects"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
anyhow = "1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
indicatif = "0.16"
dialoguer = "0.9"
serde = "1.0"
serde_json = "1.0"
cliclack = "0.1.9"
colored = "2.1.0"
notify = "6.1.1"
watchexec = "3.0.1"
